# llm-digest

./: .coverage  .gitignore  CLAUDE.md  GEMINI.md  README.md  Taskfile.yml  claude-llm.py  cli.py  config.py  database.py  datasette_config.py  datasette_metadata.json  extractors.py  llm_discovery.py  models.py  processors.py  pyproject.toml  services.py  start_datasette.sh  summarizers.py  url_summarizer.py  utils.py  web_app.py
static/: style.css
templates/: base.html  index.html  results.html  search.html
tests/: test_database.py  test_services_llm_discovery.py  test_services_llm_summary.py  test_services_opengraph.py  test_services_url_processor.py
